examples/test/testpolicy13570.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13570
  namespace: namespace16
spec:
  podSelector:
    matchLabels:
      key32: value20
      key37: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value44
          key31: value18
      podSelector:
        matchLabels:
          key37: value21
          key16: value40
          key24: value43
